apps/erp/apps/kobo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kobo
  namespace: kobo
spec:
  ingressClassName: traefik

  rules:
  - host: kc.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kobocat
            port:
              number: 8000

  - host: kf.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpi
            port:
              number: 8000

  - host: ee.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpi
            port:
              number: 8000
